# fj

./: Cargo.toml  LICENSE  README.md  fj.sh
src/: main.rs
